Changing Firebase configuration

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "deploy": "npm run build:prod && firebase deploy",
+    "deploy:hosting": "npm run build:prod && firebase deploy --only hosting",
+    "deploy:functions": "firebase deploy --only functions",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
