--- a/firebase.json
+++ b/firebase.json
@@ -5,16 +5,12 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "npm --prefix functions run lint",
+      "npm --prefix functions run build"
     ]
   },
   "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "public": "dist/BAM",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
