--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "lib": ["es2017", "dom"],
     "paths": {
       "@core/*": ["app/core/*"],
-      "@shared/*": ["app/shared/*"]
+      "@shared/*": ["app/shared/*"],
+      "@env/*": ["environments/*"]
     }
   }
 }
